<resources>
    <string name="app_name">VibrationDemo</string>
    <string name="tab_accelerometer">Accel</string>
    <string name="tab_rms">RMS</string>
    <string name="tab_velocity">Velocity</string>
    <string name="title_accelerometer">Accelerometer Data</string>
    <string name="x_default">X: 0.00</string>
    <string name="y_default">Y: 0.00</string>
    <string name="z_default">Z: 0.00</string>
    <string name="freq_default">0 Hz</string>
    <string name="rms_x_default">RMS X: 0.00</string>
    <string name="rms_y_default">RMS Y: 0.00</string>
    <string name="rms_z_default">RMS Z: 0.00</string>
    <string name="vel_x_default">Vel X: 0.00</string>
    <string name="vel_y_default">Vel Y: 0.00</string>
    <string name="vel_z_default">Vel Z: 0.00</string>
    <string name="tab_voiceprint">Voiceprint</string>
    <string name="tab_elevator">Elevator</string>
    <string name="tab_barometer">Baro</string>
    <string name="peak_freq_default">Peak: -- Hz</string>
</resources>
